--- a/feed.html
+++ b/feed.html
@@ -13,16 +13,15 @@
     :root{
       --bg:#09090B;
       --text:#F2F2F2;
-      --muted:#A9A9A9;
       --cyan:#22D3EE;
       --blue:#3B82F6;
     }
 
     *{box-sizing:border-box}
-    html,body{height:100%; margin:0; background:var(--bg); color:var(--text)}
-    body{display:grid; place-items:center; font-family:Inter,system-ui}
+    html,body{margin:0;background:var(--bg);color:var(--text)}
+    body{display:grid;place-items:center;font-family:Inter,system-ui}
 
-    /* ✅ FEED 4:5 (Instagram) */
+    /* FEED 4:5 */
     .feed{
       width:1080px;
       height:1350px;
@@ -32,22 +31,21 @@
       background:
         radial-gradient(1100px 720px at 50% 18%, rgba(34,211,238,.20), transparent 62%),
         radial-gradient(900px 680px at 82% 35%, rgba(59,130,246,.16), transparent 66%),
-        linear-gradient(#09090B, #09090B);
+        #09090B;
     }
 
-    /* topo */
+    /* TOPO */
     .top{
       position:absolute;
       left:64px; right:64px; top:72px;
       display:flex;
       justify-content:space-between;
       align-items:center;
-      gap:18px;
+      gap:16px;
     }
 
     .brand{
-      display:flex; align-items:center; gap:14px;
-      min-width:0;
+      display:flex;align-items:center;gap:14px;
     }
 
     .brand img{height:48px}
@@ -121,15 +119,15 @@
       font-size:14px;
     }
 
-    /* SHOWCASE (1 imagem estática: cels.png) */
+    /* SHOWCASE */
     .showcase{
       position:absolute;
       left:0; right:0;
-      top:610px; /* ajusta o “palco” no feed */
+      top:610px;
       height:520px;
       display:grid;
       place-items:center;
-      overflow:hidden; /* garante que nada estoure */
+      overflow:hidden;
     }
 
     .stage{
@@ -140,76 +138,37 @@
       place-items:center;
     }
 
-    /* glow atrás e com fim suave */
     .glow{
       position:absolute;
-      width:980px;
-      height:520px;
-      left:50%;
-      top:50%;
-      transform:translate(-50%,-50%);
+      inset:-40px;
       background:radial-gradient(circle at 50% 55%,
         rgba(34,211,238,.18),
         rgba(59,130,246,.12),
         transparent 68%);
       filter:blur(26px);
       opacity:.95;
-
-      /* ✅ “acaba suave” (fade) */
-      -webkit-mask-image: radial-gradient(circle at 50% 55%, #000 45%, rgba(0,0,0,.55) 60%, transparent 78%);
-              mask-image: radial-gradient(circle at 50% 55%, #000 45%, rgba(0,0,0,.55) 60%, transparent 78%);
+      mask-image: radial-gradient(circle at 50% 55%, #000 45%, rgba(0,0,0,.55) 60%, transparent 78%);
     }
 
     .cels{
       position:relative;
-      width:720px;     /* ajuste fino */
+      width:720px;
       height:auto;
-      transform: translateY(-10px); /* sobe/desce */
       filter:drop-shadow(0 34px 80px rgba(0,0,0,.72));
       z-index:2;
-      pointer-events:none;
       user-select:none;
     }
 
-    /* CTA */
-    .cta{
-      position:absolute;
-      left:64px; right:64px;
-      bottom:132px;
-      display:flex;
-      justify-content:center;
-    }
-
-    .btn{
-      padding:20px 34px;
-      font-size:20px;
-      font-weight:900;
-      border-radius:18px;
-      background:linear-gradient(90deg,var(--blue),var(--cyan));
-      color:#061019;
-      border:none;
-      box-shadow:
-        0 22px 60px rgba(34,211,238,.24),
-        0 12px 30px rgba(0,0,0,.6);
-    }
-
+    /* FOOT */
     .trust{
       position:absolute;
       left:64px; right:64px;
-      bottom:70px;
+      bottom:80px;
       display:flex;
       justify-content:space-between;
-      gap:18px;
       font-size:13px;
       color:rgba(242,242,242,.65);
     }
-
-    /* segurança: não quebrar no feed */
-    .trust > div{max-width:520px}
-
-    /* opcional: se quiser “puxar” a imagem mais pra direita/esquerda */
-    .stage{ transform: translateX(0px); } /* ex: 18px */
-
   </style>
 </head>
 
@@ -246,18 +205,12 @@
       </div>
     </section>
 
-    <section class="showcase" aria-label="Mockup do AI Studio">
+    <section class="showcase">
       <div class="stage">
         <div class="glow"></div>
-
-        <!-- ✅ Agora é 1 imagem só -->
-        <img class="cels" src="assets/img/cels.png" alt="Mockup do AI Studio (celulares)">
+        <img class="cels" src="assets/img/cels.png" alt="Mockup AI Studio">
       </div>
     </section>
-
-    <div class="cta">
-      <div class="btn">Quero testar gratuitamente</div>
-    </div>
 
     <div class="trust">
       <div>LGPD • dados usados só para ativação</div>
