--- a/feed.html
+++ b/feed.html
@@ -130,7 +130,7 @@
 
       /* ✅ deixa o conteúdo decidir a altura */
       height:auto;
-
+      width:30%;
       display:grid;
       place-items:center;
 
