--- a/aistudio.html
+++ b/aistudio.html
@@ -105,10 +105,12 @@
 </section>
 
 <!-- SHOWCASE (Como funciona) -->
+<!-- SHOWCASE (Como funciona) -->
 <section id="showcase" class="showcase">
-  <div class="container">
+  <div class="container showcase__grid">
 
-    <header class="section__header">
+    <!-- TEXTO (esquerda no desktop) -->
+    <header class="section__header showcase__text">
       <h2 class="section__title">
         Você ativa, a IA atende, o CRM organiza.
       </h2>
@@ -123,7 +125,7 @@
       </div>
     </header>
 
-    <!-- 🎯 PALCO ÚNICO DO MOCKUP -->
+    <!-- MOCKUP (direita no desktop) -->
     <div class="showcase__visual" aria-label="Mockup do AI Studio">
       <div class="showcase__glow" aria-hidden="true"></div>
 
@@ -137,8 +139,7 @@
         />
       </figure>
     </div>
-
-    <div class="showcase__cta">
+<div class="showcase__cta">
       <a
         class="btn btn--primary"
         href="https://wa.me/5511978217095?text=Quero%20testar%20gratuitamente%20o%20AI%20Studio."
@@ -146,7 +147,6 @@
         Quero testar gratuitamente
       </a>
     </div>
-
   </div>
 </section>
 
