--- a/feed.html
+++ b/feed.html
@@ -129,7 +129,8 @@
       height:520px;
       display:grid;
       place-items:center;
-      overflow:hidden; /* garante que nada estoure */
+      overflow:hidden; 
+      margin-top:10px;/* garante que nada estoure */
     }
 
     .stage{
