--- a/aistudio.html
+++ b/aistudio.html
@@ -103,13 +103,11 @@
     </div>
   </div>
 </section>
-
-<!-- SHOWCASE (Como funciona) -->
 <!-- SHOWCASE (Como funciona) -->
 <section id="showcase" class="showcase">
   <div class="container showcase__grid">
 
-    <!-- TEXTO (esquerda no desktop) -->
+    <!-- TEXTO (centralizado, simples) -->
     <header class="section__header showcase__text">
       <h2 class="section__title">
         Você ativa, a IA atende, o CRM organiza.
@@ -125,28 +123,6 @@
       </div>
     </header>
 
-    <!-- MOCKUP (direita no desktop) -->
-    <div class="showcase__visual" aria-label="Mockup do AI Studio">
-      <div class="showcase__glow" aria-hidden="true"></div>
-
-      <figure class="showcase__frame">
-        <img
-          class="showcase__img"
-          src="assets/img/cels.png"
-          alt="AI Studio — CRM, métricas e login"
-          loading="eager"
-          decoding="async"
-        />
-      </figure>
-    </div>
-<div class="showcase__cta">
-      <a
-        class="btn btn--primary"
-        href="https://wa.me/5511978217095?text=Quero%20testar%20gratuitamente%20o%20AI%20Studio."
-      >
-        Quero testar gratuitamente
-      </a>
-    </div>
   </div>
 </section>
 
