--- a/tullujournal.html
+++ b/tullujournal.html
@@ -278,9 +278,88 @@
 
   </article>
 
-  <footer class="journal-footer">
-    Tullu Journal — análise estratégica sobre tecnologia, trabalho e produtividade.
-  </footer>
+  <footer class="footer footer--journal">
+
+  <div class="container">
+
+    <div class="footer__content">
+
+      <!-- BRAND -->
+      <div class="footer__brand">
+
+        <div class="footer__logo">
+          <img src="assets/img/tullu.png" alt="Tullu Motion" class="footer__logo-img">
+          <span class="footer__logo-text">Journal</span>
+        </div>
+
+        <p class="footer__description">
+          O Tullu Journal é o espaço editorial da Tullu Motion para análises estratégicas
+          sobre tecnologia, IA, trabalho e produtividade no mercado real.
+        </p>
+
+      </div>
+
+      <!-- LINKS -->
+      <div class="footer__links">
+
+        <div class="footer__section">
+          <h4 class="footer__section-title">Journal</h4>
+          <ul class="footer__list">
+            <li><a href="journal.html" class="footer__link">Últimas análises</a></li>
+            <li><a href="journal.html#fontes" class="footer__link">Fontes e estudos</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__section">
+          <h4 class="footer__section-title">Tullu Motion</h4>
+          <ul class="footer__list">
+            <li><a href="aistudio.html" class="footer__link">AI Studio</a></li>
+            <li><a href="aistudio.html#faq" class="footer__link">Dúvidas frequentes</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__section">
+          <h4 class="footer__section-title">Contato</h4>
+          <ul class="footer__list">
+            <li>
+              <a
+                href="https://wa.me/5511978217095?text=Li%20um%20artigo%20no%20Tullu%20Journal%20e%20quero%20entender%20como%20a%20IA%20pode%20se%20aplicar%20ao%20meu%20neg%C3%B3cio."
+                class="footer__link"
+                target="_blank"
+              >
+                WhatsApp
+              </a>
+            </li>
+            <li>
+              <a href="mailto:comercial@tullumotion.com" class="footer__link">
+                comercial@tullumotion.com
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__section">
+          <h4 class="footer__section-title">Legal</h4>
+          <ul class="footer__list">
+            <li><a href="#" class="footer__link">Política de Privacidade</a></li>
+            <li><a href="#" class="footer__link">Termos de Uso</a></li>
+          </ul>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="footer__bottom">
+      <p class="footer__copyright">
+        © 2026 Tullu Motion. Conteúdo editorial. Todos os direitos reservados.
+      </p>
+    </div>
+
+  </div>
+
+</footer>
+
 
 </main>
 
