--- a/aistudio.html
+++ b/aistudio.html
@@ -19,7 +19,7 @@
   <meta property="twitter:description" content="Atendimento 24/7 no WhatsApp, agendamentos automáticos, painel de CRM. Teste grátis.">
   <meta property="twitter:image" content="assets/img/aistudio.png.png">
 
-  <link rel="icon" type="image/png" href="assets/img/tu.png.png">
+  <link rel="icon" type="image/png" href="assets/img/tup.png.png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
