--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <!-- Favicon -->
 
-  <link rel="icon" type="image/png" href="assets/img/tu.png.png"/>
+ <link rel="icon" type="image/png" href="assets/img/tup.png.png">
 
 
 
