--- a/growth.html
+++ b/growth.html
@@ -21,7 +21,7 @@
     <meta property="twitter:image" content="assets/img/growth.png.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/img/tu.png.png">
+<link rel="icon" type="image/png" href="assets/img/tup.png.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
