--- a/ma.html
+++ b/ma.html
@@ -7,12 +7,18 @@
 
 <style>
 :root{
-  --bg-dark:#020617;
-  --blue:#2563EB;
-  --blue-2:#3B82F6;
+  /* novo “azul do botão” */
+  --bg:#3B82F6;          /* base */
+  --bg-2:#2563EB;        /* sombra */
+  --bg-3:#60A5FA;        /* highlight */
   --cyan:#22D3EE;
-  --text:#EAF2FF;
-  --muted:rgba(234,242,255,.75);
+
+  --text:#FFFFFF;
+  --muted:rgba(255,255,255,.88);
+
+  /* contraste para o destaque do título (sem ficar “azul em cima de azul”) */
+  --ink:#0B1220;         /* azul bem escuro/quase preto */
+  --ink-2:#0F172A;       /* navy */
 }
 
 *{box-sizing:border-box}
@@ -33,19 +39,22 @@ body{
   position:relative;
   overflow:hidden;
   border-radius:28px;
+
+  /* fundo azul “button-like” com profundidade */
   background:
-    radial-gradient(700px 700px at 80% 30%, rgba(34,211,238,.35), transparent 60%),
-    radial-gradient(900px 900px at 15% 20%, rgba(59,130,246,.45), transparent 65%),
-    linear-gradient(145deg, #020617 0%, #020617 40%, #020617 100%);
+    radial-gradient(900px 900px at 80% 25%, rgba(34,211,238,.28), transparent 62%),
+    radial-gradient(900px 900px at 15% 15%, rgba(255,255,255,.18), transparent 60%),
+    linear-gradient(145deg, var(--bg-3) 0%, var(--bg) 30%, var(--bg-2) 100%);
 }
 
-/* Glow suave */
+/* brilho suave geral (mantém o “glow”, mas casando com azul) */
 .feed::before{
   content:"";
   position:absolute;
   inset:0;
   background:
-    linear-gradient(180deg, rgba(255,255,255,.05), transparent 40%);
+    radial-gradient(900px 420px at 50% 0%, rgba(255,255,255,.18), transparent 60%),
+    linear-gradient(180deg, rgba(255,255,255,.10), transparent 40%);
   pointer-events:none;
 }
 
@@ -53,74 +62,110 @@ body{
 .content{
   position:relative;
   height:100%;
-  padding:72px;
+  display:flex;
+  flex-direction:column;
+}
+
+/* ===== Faixa branca do logo ===== */
+.topbar{
+  background:#fff;
+  padding:22px 56px;
+  display:flex;
+  align-items:center;
+  gap:16px;
+
+  /* separação suave do fundo azul */
+  box-shadow:
+    0 10px 30px rgba(0,0,0,.18),
+    inset 0 -1px 0 rgba(15,23,42,.08);
+}
+
+.logo{
+  width:200px;          /* maior */
+  height:auto;
+  display:block;
+}
+
+/* ===== Corpo ===== */
+.main{
+  flex:1;
+  padding:64px 72px 64px;
   display:flex;
   flex-direction:column;
   justify-content:space-between;
 }
 
-/* Logo */
-.logo{
-  width:170px;
-  height:auto;
-  opacity:.95;
-}
-
 /* ===== Texto central ===== */
 .hero{
   text-align:center;
-  margin-top:-20px;
+  margin-top:6px;
 }
 
 .hero h1{
   margin:0;
-  font-size:clamp(64px, 6vw, 86px);
+  font-size:clamp(64px, 6vw, 92px);
   font-weight:900;
-  line-height:1.05;
-  letter-spacing:-0.02em;
+  line-height:1.03;
+  letter-spacing:-0.03em;
   color:var(--text);
+  text-shadow: 0 10px 40px rgba(0,0,0,.20);
 }
 
-.hero h1 span{
-  background:linear-gradient(90deg, var(--blue), var(--cyan));
-  -webkit-background-clip:text;
-  background-clip:text;
-  color:transparent;
+/* destaque agora “ink” (escuro) pra contrastar no fundo azul */
+.hero h1 .emph{
+  color:var(--ink);
+  background:rgba(255,255,255,.45);
+  padding:.04em .22em;
+  border-radius:.22em;
+  box-shadow:
+    0 14px 35px rgba(0,0,0,.18),
+    inset 0 0 0 1px rgba(255,255,255,.35);
 }
+
+/* evita “viúva” no IA */
+.nowrap{ white-space:nowrap; }
 
 .hero p{
-  margin-top:12px; /* MAIS PRÓXIMO */
-  font-size:clamp(22px, 2vw, 26px);
-  font-weight:600;
+  margin-top:14px; /* mais próximo */
+  font-size:clamp(24px, 2.2vw, 30px);
+  font-weight:700;
   color:var(--muted);
+  text-shadow: 0 10px 30px rgba(0,0,0,.18);
 }
 
-/* ===== Rodapé ===== */
+/* ===== Rodapé: maior e mais central ===== */
 .footer{
   display:flex;
-  justify-content:space-between;
+  justify-content:center;     /* centraliza */
   align-items:center;
-  font-size:14px;
-  color:rgba(234,242,255,.65);
+  gap:18px;
+  margin-top:28px;
+  flex-wrap:wrap;
 }
 
 .badge{
-  padding:10px 16px;
+  padding:14px 20px;          /* maior */
   border-radius:999px;
-  background:rgba(255,255,255,.06);
-  border:1px solid rgba(255,255,255,.12);
-  backdrop-filter:blur(8px);
-  font-weight:600;
-}
+  font-size:clamp(18px, 1.35vw, 20px);
+  font-weight:800;
 
-.right{
-  text-align:right;
+  background:rgba(255,255,255,.16);
+  border:1px solid rgba(255,255,255,.28);
+  backdrop-filter:blur(10px);
+
+  box-shadow:
+    0 18px 40px rgba(0,0,0,.16),
+    inset 0 0 0 1px rgba(15,23,42,.08);
 }
 
 /* Mobile preview */
-@media(max-width:600px){
-  .content{padding:40px}
-  .logo{width:140px}
+@media (max-width:600px){
+  .topbar{ padding:18px 22px; }
+  .logo{ width:170px; }
+
+  .main{ padding:46px 26px 46px; }
+  .footer{ gap:12px; }
+  .badge{ padding:12px 16px; }
 }
 </style>
 </head>
@@ -128,37 +173,34 @@ body{
 <body>
 
 <section class="feed">
-
   <div class="content">
 
-    <!-- Logo -->
-    <img src="assets/img/logoma.avif" alt="Mercado Agentes" class="logo" />
-
-    <!-- Texto principal -->
-    <div class="hero">
-      <h1>
-        Crie seu <span>1º agente de IA</span><br>
-        fácil e rápido.
-      </h1>
-
-      <p>
-        Marketplace no-code para agentes de IA no WhatsApp.
-      </p>
+    <!-- Faixa branca do logo (pra texto preto do logo não sumir) -->
+    <div class="topbar">
+      <img src="assets/img/logoma.avif" alt="Mercado Agentes" class="logo" />
     </div>
 
-    <!-- Rodapé -->
-    <div class="footer">
-      <div class="badge">
-        Atendimento • Vendas • Agendamentos • Suporte
+    <div class="main">
+      <!-- Texto principal -->
+      <div class="hero">
+        <h1>
+          Crie seu <span class="emph">1º agente</span><br>
+          <span class="nowrap">de IA</span> fácil e rápido.
+        </h1>
+
+        <p>
+          Marketplace no-code para agentes de IA no WhatsApp.
+        </p>
       </div>
 
-      <div class="badge right">
-        Infra + CRM integrado
+      <!-- Rodapé -->
+      <div class="footer">
+        <div class="badge">Atendimento • Vendas • Agendamentos • Suporte</div>
+        <div class="badge">Infra + CRM integrado</div>
       </div>
     </div>
 
   </div>
-
 </section>
 
 </body>
